fix avatar user

--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,4 +1,4 @@
-# файл, который указывает на файлы и директории, которые не должны попать в git репозиторий
+# файл, который указывает на файлы и папки, которые не должны попать в git репозиторий
 
 /node_modules
 
